// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DismissModal disappears correctly after dismissing 1`] = `
<Modal
  hardwareAccelerated={false}
  transparent={true}
  visible={true}
>
  <View
    style={
      {
        "backgroundColor": "white",
        "borderRadius": 10,
        "borderWidth": 1,
        "margin": "auto",
        "width": 550,
      }
    }
  >
    <View
      style={
        {
          "borderBottomWidth": 1,
        }
      }
    >
      <Text
        style={
          {
            "alignSelf": "flex-start",
            "color": "#000",
            "fontSize": 20,
            "fontWeight": "bold",
            "lineHeight": 26,
            "marginHorizontal": 10,
            "padding": 20,
            "paddingLeft": 10,
            "textAlign": "center",
          }
        }
      >
        Title
      </Text>
    </View>
    <Text
      style={
        {
          "alignSelf": "flex-start",
          "color": "#000",
          "fontSize": 20,
          "lineHeight": 26,
          "marginHorizontal": 10,
          "padding": 20,
          "paddingLeft": 10,
          "textAlign": "left",
        }
      }
    >
      Description
    </Text>
    <View
      style={
        {
          "alignSelf": "center",
          "flexDirection": "row",
          "paddingBottom": 20,
        }
      }
    >
      <View
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "marginBottom": 16,
          }
        }
      >
        <RNGestureHandlerButton
          collapsable={false}
          delayLongPress={600}
          enabled={true}
          exclusive={true}
          handlerTag={2}
          handlerType="NativeViewGestureHandler"
          onGestureEvent={[Function]}
          onGestureHandlerEvent={[Function]}
          onGestureHandlerStateChange={[Function]}
          onHandlerStateChange={[Function]}
          rippleColor={0}
          touchSoundDisabled={false}
        >
          <View
            accessible={true}
            collapsable={false}
            style={
              {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                [
                  {
                    "backgroundColor": "#3742fa",
                    "borderColor": "#3742fa",
                    "borderRadius": 8,
                    "borderWidth": 1,
                    "padding": 8,
                  },
                ]
              }
            >
              <Text
                style={
                  [
                    {
                      "color": "#000",
                      "fontSize": 20,
                      "lineHeight": 26,
                      "textAlign": "left",
                    },
                    {
                      "textAlign": "center",
                    },
                    {
                      "color": "#fff",
                    },
                  ]
                }
              >
                Ok
              </Text>
            </View>
          </View>
        </RNGestureHandlerButton>
      </View>
    </View>
  </View>
</Modal>
`;

exports[`DismissModal renders correctly 1`] = `
<Modal
  hardwareAccelerated={false}
  transparent={true}
  visible={true}
>
  <View
    style={
      {
        "backgroundColor": "white",
        "borderRadius": 10,
        "borderWidth": 1,
        "margin": "auto",
        "width": 550,
      }
    }
  >
    <View
      style={
        {
          "borderBottomWidth": 1,
        }
      }
    >
      <Text
        style={
          {
            "alignSelf": "flex-start",
            "color": "#000",
            "fontSize": 20,
            "fontWeight": "bold",
            "lineHeight": 26,
            "marginHorizontal": 10,
            "padding": 20,
            "paddingLeft": 10,
            "textAlign": "center",
          }
        }
      >
        Title
      </Text>
    </View>
    <Text
      style={
        {
          "alignSelf": "flex-start",
          "color": "#000",
          "fontSize": 20,
          "lineHeight": 26,
          "marginHorizontal": 10,
          "padding": 20,
          "paddingLeft": 10,
          "textAlign": "left",
        }
      }
    >
      Description
    </Text>
    <View
      style={
        {
          "alignSelf": "center",
          "flexDirection": "row",
          "paddingBottom": 20,
        }
      }
    >
      <View
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "marginBottom": 16,
          }
        }
      >
        <RNGestureHandlerButton
          collapsable={false}
          delayLongPress={600}
          enabled={true}
          exclusive={true}
          handlerTag={1}
          handlerType="NativeViewGestureHandler"
          onGestureEvent={[Function]}
          onGestureHandlerEvent={[Function]}
          onGestureHandlerStateChange={[Function]}
          onHandlerStateChange={[Function]}
          rippleColor={0}
          touchSoundDisabled={false}
        >
          <View
            accessible={true}
            collapsable={false}
            style={
              {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                [
                  {
                    "backgroundColor": "#3742fa",
                    "borderColor": "#3742fa",
                    "borderRadius": 8,
                    "borderWidth": 1,
                    "padding": 8,
                  },
                ]
              }
            >
              <Text
                style={
                  [
                    {
                      "color": "#000",
                      "fontSize": 20,
                      "lineHeight": 26,
                      "textAlign": "left",
                    },
                    {
                      "textAlign": "center",
                    },
                    {
                      "color": "#fff",
                    },
                  ]
                }
              >
                Ok
              </Text>
            </View>
          </View>
        </RNGestureHandlerButton>
      </View>
    </View>
  </View>
</Modal>
`;
